--- a/src/css/remedy.css
+++ b/src/css/remedy.css
@@ -1,3 +1,5 @@
+/* Source: https://github.com/mozdevs/cssremedy/blob/master/remedy.css */
+
 /* Switch to border-box for box-sizing. */
 
 *, ::before, ::after {
@@ -10,6 +12,7 @@ body {
 }
 
 /* Switch to using rem units for typography. Fix line-height on headlines. */
+
 h1 {
     /* Make all H1 large, remove nested-shrinking sizes. */
     font-size: 2rem;
@@ -53,25 +56,4 @@ pre {
 
 hr {
     border: .5px solid;
-}
-
-body {
-    background: #00A9FD;
-    font-family: sans-serif;
-}
-
-header {
-    color: white;
-}
-
-header>h1 {
-    display: inline-block;
-}
-
-nav>ul {
-    list-style: none;
-}
-
-nav li {
-    display: inline-block;
 }
