--- a/src/css/index.css
+++ b/src/css/index.css
@@ -10,7 +10,7 @@
     --main-bg-blue: #00A9FD;
     --hero-h2-yellow: #FFFEE1;
     --display-font-family: 'Passion One', sans-serif;
-    --display-text-shadow: -2px 2px 2px rgba(0, 0, 0, 0.5);
+    --display-shadow: -2px 2px 2px rgba(0, 0, 0, 0.5);
     /* Scale font size for any screen size. https://css-tricks.com/books/volume-i/scale-typography-screen-size/*/
     /* font-size: calc([minimum size] + ([maximum size] - [minimum size]) * ((100vw - [minimum viewport width]) / ([maximum viewport width] - [minimum viewport width]))); */
     font-size: calc(24px + (32 - 24) * ((100vw - 300px) / (1600 - 300)));
@@ -25,8 +25,10 @@ body {
 
 h1, nav li, .hero h2, .hero h2+p, .hero button {
     font-family: var(--display-font-family);
-    text-shadow: var(--display-text-shadow);
+    text-shadow: var(--display-shadow);
 }
+
+/* -- Header -- */
 
 header {
     background: var(--main-bg-blue);
@@ -44,19 +46,31 @@ header .brand, header h1, header nav, nav li {
     display: inline-block;
 }
 
-/* -- Nav -- */
+.brand__logo {
+    /* font-size: calc([minimum size] + ([maximum size] - [minimum size]) * ((100vw - [minimum viewport width]) / ([maximum viewport width] - [minimum viewport width]))); */
+    width: calc(100px + (150 - 100) * ((100vw - 300px) / (1600 - 300)));
+    display: inline-block;
+    vertical-align: bottom;
+    filter: drop-shadow(var(--display-shadow));
+}
 
-nav>ul {
+/* -- Top Nav -- */
+
+header brand {
+    margin-right: 1rem;
+}
+
+header nav>ul {
     list-style: none;
     padding: 0;
     margin: 0;
 }
 
-nav li {
+header nav li {
     margin-right: 0;
 }
 
-nav li+li::before {
+header nav li+li::before {
     content: ' / '
 }
 
