--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,8 @@
 /* -- Global -- */
 
-*, ::before, ::after {
+*,
+::before,
+::after {
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -39,9 +41,14 @@ button {
 /* -- Header -- */
 
 header {
-    background: var(--main-bg-blue);
-    padding: 0.75rem 1rem;
+    position: absolute;
+    /* background-color: var(--main-bg-blue); */
+    /* https://www.heropatterns.com/ charlie brown pattern */
+    /* background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='12' viewBox='0 0 20 12'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='charlie-brown' fill='%23d2f0ff' fill-opacity='0.36'%3E%3Cpath d='M9.8 12L0 2.2V.8l10 10 10-10v1.4L10.2 12h-.4zm-4 0L0 6.2V4.8L7.2 12H5.8zm8.4 0L20 6.2V4.8L12.8 12h1.4zM9.8 0l.2.2.2-.2h-.4zm-4 0L10 4.2 14.2 0h-1.4L10 2.8 7.2 0H5.8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"); */
+    top: 0.75rem;
+    left: 1rem;
     color: white;
+    z-index: 3;
 }
 
 header h1 {
@@ -50,7 +57,9 @@ header h1 {
     font-size: 1.5rem;
 }
 
-header .brand, header h1, header nav {
+header .brand,
+header h1,
+header nav {
     display: inline-block;
 }
 
@@ -82,12 +91,13 @@ header nav li {
 }
 
 header nav li+li::before {
-    content: ' / '
+    /* content: ' / ' */
 }
 
 header nav a {
     color: inherit;
     text-decoration: none;
+    text-transform: lowercase;
 }
 
 header nav a:hover {
@@ -100,6 +110,7 @@ header nav a:active {
 
 header nav .current {
     color: var(--hero-yellow);
+    text-transform: uppercase;
 }
 
 /* -- Hero -- */
@@ -110,9 +121,14 @@ header nav .current {
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: 75vh;
-    background: var(--main-bg-blue);
-    padding: 0.5rem 1rem;
+    min-height: 100vh;
+    padding-right: 1rem;
+    padding-left: 1rem;
+    padding-top: 7rem;
+    padding-bottom: 1rem;
+    background-color: var(--main-bg-blue);
+    /* https://www.heropatterns.com/ charlie brown pattern */
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='12' viewBox='0 0 20 12'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='charlie-brown' fill='%23d2f0ff' fill-opacity='0.36'%3E%3Cpath d='M9.8 12L0 2.2V.8l10 10 10-10v1.4L10.2 12h-.4zm-4 0L0 6.2V4.8L7.2 12H5.8zm8.4 0L20 6.2V4.8L12.8 12h1.4zM9.8 0l.2.2.2-.2h-.4zm-4 0L10 4.2 14.2 0h-1.4L10 2.8 7.2 0H5.8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
 .hero__content {
@@ -138,22 +154,23 @@ header nav .current {
     color: white;
     margin: 0;
     margin-bottom: 1.5rem;
-    
+
 }
 
 .hero button {
     margin-right: 0.5rem;
     margin-bottom: 0.5rem;
     font-family: var(--display-font-family);
-    text-shadow: var(--display-shadow);
-    box-shadow: var(--display-shadow), inset var(--display-shadow);
-    background: transparent;
+    /* text-shadow: var(--display-shadow); */
+    /* box-shadow: var(--display-shadow), inset var(--display-shadow); */
+    box-shadow: var(--display-shadow);
+    background: white;
     border: 2px solid white;
-    color: white;
+    color: var(--main-text-black);
 }
 
 .hero .button--primary {
-    background: white;
+    background: var(--hero-yellow);
     color: var(--main-text-black);
     text-shadow: none;
     box-shadow: var(--display-shadow);
@@ -171,3 +188,10 @@ header nav .current {
     max-width: 500px;
 }
 
+/* -- Mobile -- */
+
+@media screen and (max-width: 650px) {
+    .hero__bg img {
+        display: none;
+    }
+}
