--- a/src/css/index.css
+++ b/src/css/index.css
@@ -10,8 +10,8 @@
 
 :root {
     --main-text-black: #111111;
-    --main-bg-blue: rgb(0, 132, 209);
-    --hero-yellow: #FFFEE1;
+    --main-bg-blue: #0077db;
+    --hero-yellow: #fffcb5;
     --display-font-family: 'Passion One', sans-serif;
     --display-shadow: -2px 2px 2px rgba(0, 0, 0, 0.5);
     /* Scale font size for any screen size. https://css-tricks.com/books/volume-i/scale-typography-screen-size/*/
@@ -42,9 +42,6 @@ button {
 
 header {
     position: absolute;
-    /* background-color: var(--main-bg-blue); */
-    /* https://www.heropatterns.com/ charlie brown pattern */
-    /* background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='12' viewBox='0 0 20 12'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='charlie-brown' fill='%23d2f0ff' fill-opacity='0.36'%3E%3Cpath d='M9.8 12L0 2.2V.8l10 10 10-10v1.4L10.2 12h-.4zm-4 0L0 6.2V4.8L7.2 12H5.8zm8.4 0L20 6.2V4.8L12.8 12h1.4zM9.8 0l.2.2.2-.2h-.4zm-4 0L10 4.2 14.2 0h-1.4L10 2.8 7.2 0H5.8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"); */
     top: 0.75rem;
     left: 1rem;
     color: white;
@@ -126,9 +123,9 @@ header nav .current {
     padding-left: 1rem;
     padding-top: 5rem;
     padding-bottom: 1rem;
-    background-color: var(--main-bg-blue);
-    /* https://www.heropatterns.com/ charlie brown pattern */
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='12' viewBox='0 0 20 12'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='charlie-brown' fill='%23d2f0ff' fill-opacity='0.36'%3E%3Cpath d='M9.8 12L0 2.2V.8l10 10 10-10v1.4L10.2 12h-.4zm-4 0L0 6.2V4.8L7.2 12H5.8zm8.4 0L20 6.2V4.8L12.8 12h1.4zM9.8 0l.2.2.2-.2h-.4zm-4 0L10 4.2 14.2 0h-1.4L10 2.8 7.2 0H5.8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    /* Hero Patterns 'Zig Zag'*/
+    background-color: #0056e0;
+    background-image: url("data:image/svg+xml,%3Csvg width='40' height='12' viewBox='0 0 40 12' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 6.172L6.172 0h5.656L0 11.828V6.172zm40 5.656L28.172 0h5.656L40 6.172v5.656zM6.172 12l12-12h3.656l12 12h-5.656L20 3.828 11.828 12H6.172zm12 0L20 10.172 21.828 12h-3.656z' fill='%230062ff' fill-opacity='0.25' fill-rule='evenodd'/%3E%3C/svg%3E");
 }
 
 .hero__content {
