--- a/src/css/index.css
+++ b/src/css/index.css
@@ -134,6 +134,7 @@ header nav .current {
 }
 
 .hero h2 {
+    font-weight: normal;
     font-size: 2.4rem;
     line-height: 2.4rem;
     letter-spacing: 0.025rem;
