--- a/src/css/index.css
+++ b/src/css/index.css
@@ -10,7 +10,8 @@
 
 :root {
     --main-text-black: #111111;
-    --main-bg-blue: rgb(0, 132, 209);
+    --primary-bg-color: rgb(0, 132, 209);
+    --secondary-bg-color: rgb(0, 162, 255);
     --hero-yellow: #FFFEE1;
     --display-font-family: 'Passion One', sans-serif;
     --display-shadow: -2px 2px 2px rgba(0, 0, 0, 0.5);
@@ -42,7 +43,7 @@ button {
 
 header {
     position: absolute;
-    /* background-color: var(--main-bg-blue); */
+    /* background-color: var(--primary-bg-color); */
     /* https://www.heropatterns.com/ charlie brown pattern */
     /* background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='12' viewBox='0 0 20 12'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='charlie-brown' fill='%23d2f0ff' fill-opacity='0.36'%3E%3Cpath d='M9.8 12L0 2.2V.8l10 10 10-10v1.4L10.2 12h-.4zm-4 0L0 6.2V4.8L7.2 12H5.8zm8.4 0L20 6.2V4.8L12.8 12h1.4zM9.8 0l.2.2.2-.2h-.4zm-4 0L10 4.2 14.2 0h-1.4L10 2.8 7.2 0H5.8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"); */
     top: 0.75rem;
@@ -126,9 +127,16 @@ header nav .current {
     padding-left: 1rem;
     padding-top: 5rem;
     padding-bottom: 1rem;
-    background-color: var(--main-bg-blue);
+    background-color: var(--primary-bg-color);
+    background: repeating-linear-gradient(
+        -45deg,
+        var(--primary-bg-color),
+        var(--primary-bg-color) 100px,
+        var(--secondary-bg-color) 100px,
+        var(--secondary-bg-color) 200px
+    )
     /* https://www.heropatterns.com/ charlie brown pattern */
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='12' viewBox='0 0 20 12'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='charlie-brown' fill='%23d2f0ff' fill-opacity='0.15'%3E%3Cpath d='M9.8 12L0 2.2V.8l10 10 10-10v1.4L10.2 12h-.4zm-4 0L0 6.2V4.8L7.2 12H5.8zm8.4 0L20 6.2V4.8L12.8 12h1.4zM9.8 0l.2.2.2-.2h-.4zm-4 0L10 4.2 14.2 0h-1.4L10 2.8 7.2 0H5.8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    /* background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='12' viewBox='0 0 20 12'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='charlie-brown' fill='%23d2f0ff' fill-opacity='0.15'%3E%3Cpath d='M9.8 12L0 2.2V.8l10 10 10-10v1.4L10.2 12h-.4zm-4 0L0 6.2V4.8L7.2 12H5.8zm8.4 0L20 6.2V4.8L12.8 12h1.4zM9.8 0l.2.2.2-.2h-.4zm-4 0L10 4.2 14.2 0h-1.4L10 2.8 7.2 0H5.8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"); */
 }
 
 .hero__content {
@@ -156,7 +164,6 @@ header nav .current {
     color: white;
     margin: 0;
     margin-bottom: 1.5rem;
-
 }
 
 .hero button {
